--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   font-family: 'IBM Plex Mono', Courier, monospace;
   min-width: 100%;
   text-align: center;
-  background-image: url('./assets/img/n5.jpg');
+
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -14,7 +14,7 @@
 /*Dashboard*/
 .dashboard-container {
   min-height: 100vh;
-  background: #01b5f600;
+
   font-family:'Courier New', Courier, monospace
 }
 .main-content {
@@ -30,13 +30,13 @@
   margin-bottom: 27px;
   border-radius: 36px;
   padding: 12px 24px;
-  background: #feffff65;
+  background: #feffff00;
   border-bottom: 1px solid #1e0606;
   box-shadow: 0 1px 3px rgba(0,0,0,0.08);
 }
 
 .header-content {
-  background: rgba(255, 255, 255, 0.058);
+  background: rgba(6, 177, 9, 0.761);
   backdrop-filter: blur(10px);
   padding: 1.2rem 1.5rem;
   border-radius: 15px;
@@ -46,6 +46,23 @@
   align-items: center;
 }
 
+.header-title {
+  margin: 0;
+  font-size: 18px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+  color: #222;
+}
+
+.img-headerTop{
+  height: 50px;
+  width: 50px;
+  background-color: #090909ae;
+  margin: 9px;
+  border-radius: 9px;
+}
+
+/*END HEADER*/
 
 
 
@@ -459,24 +476,7 @@
   gap: 20px;
 }
 
-.tool-card {
-  background-color: #0056b3;
-  padding: 20px;
-  border-radius: 12px;
-  box-shadow: 0 2px 10px rgba(0,0,0,0.08);
-  cursor: pointer;
-  transition: 0.2s;
-}
 
-.tool-card:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 5px 20px rgba(0,0,0,0.12);
-}
-
-.tool-card h5 {
-  font-size: 1.2rem;
-  margin-bottom: 8px;
-}
 /* Botón tipo cristal */
 .btn-glass {
   padding: 10px 18px;
@@ -672,9 +672,9 @@
 .tool-card {
   padding: 20px;
   border-radius: 14px;
-  background: rgba(255,255,255,0.18);
+  background: rgba(255, 255, 255, 0.545);
   backdrop-filter: blur(12px);
-  color: white;
+  color: rgb(0, 0, 0);
   cursor: pointer;
   transition: 0.3s;
   box-shadow: 0 8px 25px rgba(255,255,255,0.15);
@@ -1052,14 +1052,6 @@
 
 
 
-
-.header-title {
-  margin: 0;
-  font-size: 20px;
-  font-family: 'Courier New', Courier, monospace;
-  font-weight: bold;
-  color: #222;
-}
 
 .header-badge {
   margin-left: 8px;
