--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   font-family: 'IBM Plex Mono', Courier, monospace;
   min-width: 100%;
   text-align: center;
-  background-image: url('./assets/img/n5.jpg');
+  background-image: url('./assets/img/n6.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -13,24 +13,22 @@
 
 /*Dashboard*/
 .dashboard-container {
-
   font-family:'Courier New', Courier, monospace
 }
 .main-content {
   flex: 1;
-  padding: 18px;
+  padding: 1px;
 }
 
 
 /*Header Container*/
 .hc_01 {
-  margin-top: 63px;
-  background: rgba(1, 132, 176, 0.495);
+  margin-top: 1px;
+  background: rgba(14, 165, 87, 0.87);
   backdrop-filter: blur(10px);
   border-radius: 15px;
   box-shadow: 0 4px 18px rgba(0, 0, 0, 0.1);
-  padding: 1rem 1.5rem;
-
+  padding: 12px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -39,11 +37,24 @@
 /* Contenedor principal del header (icons + textos) */
 .header-buttons {
   display: flex;
+  gap: 12px;
   align-items: center;
-  gap: 15px;
-  justify-content: space-between; /* distribuye mejor el espacio */
-  width: 100%;
+
+  padding: 10px;
 }
+
+.nav-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 6px;
+}
+
+.nav-btn:hover {
+  transform: scale(1.12);
+  transition: 0.2s;
+}
+
 
 .header-left {
   display: flex;
@@ -70,6 +81,7 @@
   border-radius: 8px;
   cursor: pointer;
   transition: transform .2s;
+  color: #ededed;
 }
 
 .img-headerTop:hover {
@@ -78,8 +90,8 @@
 
 /* Títulos dentro del header */
 .header-title {
-  font-size: 1rem;
-  font-family: 'Courier New', Courier, monospace;
+  font-size: 28px;
+
   font-weight: bold;
   color: #222;
   margin-left: auto; /* Esto empuja los títulos al extremo derecho */
@@ -168,7 +180,7 @@
 .tool-card {
   padding: 20px;
   border-radius: 14px;
-  background: rgba(134, 4, 4, 0.545);
+  background: rgb(255, 255, 255);
   backdrop-filter: blur(12px);
   color: rgb(0, 0, 0);
   cursor: pointer;
@@ -206,8 +218,7 @@
   background-color: #fdfdfdcd;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  text-align: center;
+ text-align: center;
   color: #000;
 }
 
@@ -498,7 +509,7 @@
 .sidebar {
   width: 260px;
   background: #0b1a30;
-  color: white;
+  color: rgb(3, 60, 130);
   padding: 25px;
   display: flex;
   flex-direction: column;
@@ -625,7 +636,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(159, 158, 158, 0.005);
+  background: rgba(248, 244, 244, 0.005);
   backdrop-filter: blur(4px);
   display: flex;
   justify-content: center;
@@ -680,7 +691,7 @@
   width: 100%;
   margin-top: 15px;
   color: #fff;
-    font-family: 'IBM Plex Mono', Courier, monospace;
+
 }
 
 .info-table th {
@@ -724,20 +735,20 @@
 
 /* Sidebar */
 .sidebar-popup {
-     font-family: 'IBM Plex Mono', Courier, monospace;
+
   position: fixed;
   top: 0;
   left: 0;
   width: 260px;
   height: 100%;
-  background: rgba(255, 255, 255, 0.18);
+  background: rgba(255, 255, 255, 0.811);
   backdrop-filter: blur(12px);
   padding: 20px;
   box-shadow: 4px 0 25px rgba(255, 255, 255, 0.3);
   z-index: 1000;
   transform: translateX(-100%);
   transition: transform 0.35s ease;
-  color: #fff;
+  color: #003746;
 }
 
 .sidebar-popup.open {
@@ -786,18 +797,19 @@
 }
 
 .btn-logout:hover {
-  background: rgba(255, 80, 80, 0.6);
+  background: rgba(0, 0, 0, 0.522);
 }
 /* Tarjetas principales */
 /* Submenu */
 .submenu-card {
-  margin-top: -10px;
-  margin-bottom: 20px;
-  padding: 15px;
+
+  
+  padding: 12px;
   border-radius: 12px;
-  background: rgba(0, 0, 0, 0.775);
+  background: rgba(255, 255, 255, 0.247);
   backdrop-filter: blur(10px);
-  color: #fff;
+  color: #000000;
+  font-weight: 600;
   animation: fadeIn 0.25s ease;
 }
 
@@ -1049,7 +1061,7 @@
   background: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  font-family: Arial, sans-serif;
+
 }
 
 .form-historial h2 {
@@ -1206,7 +1218,7 @@
   margin: auto;
   padding: 20px;
   text-align: center;
-  font-family: "Inter", sans-serif;
+  
 }
 
 .search-input01{
@@ -1284,4 +1296,44 @@
 .header-title-bus{
   color: aliceblue;
   
+}
+
+.imgmenu{
+  height: 50px;
+  width: 50px;
+}
+
+.dashboard-container{
+  width: 100%;
+  padding: 30px;
+}
+
+.dashboard-menu{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  gap: 25px;
+  margin-top: 20px;
+}
+
+.dash-card{
+  background: #fff;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 10px rgba(0,0,0,0.08);
+  cursor: pointer;
+  transition: .2s;
+}
+
+.dash-card:hover{
+  transform: translateY(-4px);
+  box-shadow: 0px 6px 15px rgba(0,0,0,0.12);
+}
+
+.dash-card h3{
+  margin: 0;
+  font-size: 20px;
+}
+.dash-card p{
+  margin-top: 5px;
+  opacity: 0.7;
 }
